Fixed flex-direction for #fiveDayView items, they now render in the correct order on mobile. Fixed some spacing issues. Fixed location header on mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -276,11 +276,44 @@
 } */
 
 @media (max-width: 500px) {
+    .main {
+        padding-left: 0px;
+    }
     .bufferBarRight {
         display: none;
     }
+    .footerContainerRight {
+        padding-right: 0px;
+    }
+    .noPad {
+        padding-right: 0px;
+    }
+    .searchBarWrapper {
+        justify-content: flex-end;
+    }
+    .searchBarWrapper h2 {
+        font-size: 25px;
+    }
+    .sectiontitles {
+        text-align: center;
+    }
+    .sideNavWidthContainer {
+        min-width: fit-content;
+    }
+    #weather-view, #fiveDayView {
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        width: 100%;
+    }
+    #fiveDayLocationCol {
+        padding-left: 10px;
+    }
+
     .currentWeatherView, .fiveDayCards {
-        margin: auto;
+        /* margin: auto; */
+        width: 18rem;
+        max-width: 100%;
     }
 }
 
